--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 #theme: jekyll-theme-slate
-title: Buffer overflow 
-description: Stack based Buffer overflow in linux x64.
+#title: Buffer overflow 
+#description: Stack based Buffer overflow in linux x64.
